[aws-sts-kotlin-base] Open java.base/java.lang for ProjectBuilder tests
Under kotlin-gradle-library, ProjectBuilder.build() fails with
IllegalAccessException because Gradle's DefaultLegacyTypesSupport uses
MethodHandles.privateLookupIn on java.lang.Object. The same workaround
is in gradle-extensions/build.gradle.kts.