@@ -20,3 +20,8 @@ dependencies {
 
     testImplementation(libs.mockk)
 }
+
+tasks.test {
+    // FIXME https://github.com/gradle/gradle/issues/18647
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+}
